Closed Bug 1018544 Opened 10 years ago Closed 10 years ago

All mochitests are leaking on 1.3T

Categories

(Core :: DOM: Core & HTML, defect)

All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
blocking-b2g 1.3T+
Tracking Status
b2g-v1.3T --- fixed
b2g-v1.4 --- unaffected
b2g-v2.0 --- unaffected

People

(Reporter: dougt, Assigned: bholley)

References

Details

(Whiteboard: [MemShrink])

Attachments

(1 file)

      No description provided.
It looks like we’re leaking *everything* during mochitest runs on linux desktop of 1.3T.  

DISPLAY=:1  ./mach mochitest-plain dom/tests/mochitest/webcomponents
0:08.04 TEST-UNEXPECTED-FAIL | leakcheck | 1192227 bytes leaked (AsyncLatencyLogger, AtomImpl, CacheObserver, Comment, DOMStorageObserver, …)

Other directories have similar failures.
Assignee: nobody → dougt
blocking-b2g: --- → 1.3T?
Changeset 171750:53f27850e693: good
Due to skipped revisions, the first bad revision could be any of:                                                                                                                                                                                                               
changeset:   171751:b28aa40c62b2
user:        Bobby Holley <bobbyholley@gmail.com>
date:        Wed Apr 23 09:28:46 2014 -0700
summary:     Bug 993772 - Introduce a singleton compilation scope. r=mrbkap a=1.3t+

changeset:   171752:1adf691f94f9
user:        Bobby Holley <bobbyholley@gmail.com>
date:        Wed Apr 23 09:28:46 2014 -0700
summary:     Bug 993772 - Switch to the singleton compilation scope for XBL compilation. r=mrbkap a=1.3t+
Are desktop builds on Tarako a supported configuration? They're certainly not on [1]. If we were really leaking the world on Tarko, we probably would have noticed by now.

Still, that's worrying. Doug, can you try just backing out bug 993772 locally and seeing if the problem is fixed?

[1] https://tbpl.mozilla.org/?tree=Mozilla-B2g28-v1.3t
yes, backout fixes the leak
if it is worth anything, if you bisect the backout,

https://hg.mozilla.org/releases/mozilla-b2g28_v1_3t/rev/4b60784f269f

caused it.
off by one:

The first bad revision is:
changeset:   172169:04ac7356e96e
tag:         1adf691f94f9
user:        Bobby Holley <bobbyholley@gmail.com>
date:        Wed Apr 23 09:28:46 2014 -0700
summary:     Bug 993772 - Switch to the singleton compilation scope for XBL compilation. r=mrbkap a=1.3t+
(In reply to Doug Turner (:dougt) from comment #6)
> off by one:
> 
> The first bad revision is:
> changeset:   172169:04ac7356e96e
> tag:         1adf691f94f9
> user:        Bobby Holley <bobbyholley@gmail.com>
> date:        Wed Apr 23 09:28:46 2014 -0700
> summary:     Bug 993772 - Switch to the singleton compilation scope for XBL
> compilation. r=mrbkap a=1.3t+

(I misunderstood over IRC, and thought that you were saying that the culprit was the XUL patch).

If this affects XBL, it's probably worth investigating, since we occasionally instantiate XBL controls in content (<video>, <audio>, and <marquee> pretty much). Though it's still pretty likely that this is limited to the XBL usage we have in XUL, since we otherwise would have triggered the leak running tests for video-related things.
Flags: needinfo?(james.zhang)
Flags: needinfo?(james.zhang) → needinfo?(ying.xu)
(In reply to Bobby Holley (:bholley) from comment #3)
> Are desktop builds on Tarako a supported configuration? They're certainly
> not on [1]. If we were really leaking the world on Tarko, we probably would
> have noticed by now.

Hi, Bobby.
Does the real tarako phone has the same leaking issue?
If there were any logs, we can check it , because we continue running monkey test using real phones.
Flags: needinfo?(ying.xu)
Over to Core::Dom as per Doug's bisection in comment 6.
Component: General → DOM
Product: Firefox OS → Core
Blocks: 993772
Whiteboard: [MemShrink]
I'll take a quick look at this.
(In reply to ying.xu from comment #8)
> (In reply to Bobby Holley (:bholley) from comment #3)
> > Are desktop builds on Tarako a supported configuration? They're certainly
> > not on [1]. If we were really leaking the world on Tarko, we probably would
> > have noticed by now.
> 
> Hi, Bobby.
> Does the real tarako phone has the same leaking issue?
> If there were any logs, we can check it , because we continue running monkey
> test using real phones.

I doubt it's possible to run a debug build on the device, so we should assume that this affects the device until proven otherwise.
(In reply to Kyle Huey [:khuey] (khuey@mozilla.com) from comment #11)
> (In reply to ying.xu from comment #8)
> > (In reply to Bobby Holley (:bholley) from comment #3)
> > > Are desktop builds on Tarako a supported configuration? They're certainly
> > > not on [1]. If we were really leaking the world on Tarko, we probably would
> > > have noticed by now.
> > 
> > Hi, Bobby.
> > Does the real tarako phone has the same leaking issue?
> > If there were any logs, we can check it , because we continue running monkey
> > test using real phones.
> 
> I doubt it's possible to run a debug build on the device, so we should
> assume that this affects the device until proven otherwise.

Debug builds work on the device. its slow but working.
I wonder what's the end user impact of this? if any? Thanks
Flags: needinfo?(dougt)
I can't totally tell whether this actually affects Tarako, but it might. The fix is to backport Part 5 of bug 990290 to 1.3T (which is probably a good thing to do anyway).

I'll attach a patch.
Assignee: dougt → bobbyholley
Flags: needinfo?(dougt)
More specifically - I think that doing JS_InitClass on the compilation global is causing us to define various properties on the system-wide compilation global that stick around longer than they otherwise would have. It probably doesn't matter in practice, because I'm pretty sure we never unload in-content XBL bindings (like marquee), so we hold onto this stuff until the end anyway. But I'm not 100% sure about that last part.
Comment on attachment 8433581 [details] [diff] [review]
Backport patch from bug 990290 to 1.3T to fix leaks. v1

r=me
Attachment #8433581 - Flags: review?(bzbarsky) → review+
Doug, what's the approval process here?
Flags: needinfo?(dougt)
This is blocking now, so just land. ;)
blocking-b2g: 1.3T? → 1.3T+
I don't have a pushable tarako repo at this point. Flagging for sheriff-assist.
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: